oxiplate-derive/tests/broken/for/for-no-ident.stderr
error: Expected 'in'
 --> tests/broken/for/for-no-ident.rs:4:31
  |
4 | #[oxiplate_inline("{%- for in numbers -%}No ident present{% endfor %}")]
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
